crates/parser/tests/snapshots/fixture_test__trait_impl.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
            - - y
              - Named:
                  name: Int
                  span:
                    - 39
                    - 42
      deriving: []
      span:
        - 13
        - 44
  - DefImpl:
      platform: ~
      trait_name: Eq
      target_type:
        Named:
          name: Point
          span:
            - 54
            - 59
      type_params: []
      type_constraints: []
      methods:
        - platform: ~
          name: eq
          visibility: Private
          type_params: []
          params:
            - name: a
              ty: ~
              span:
                - 74
                - 75
            - name: b
              ty: ~
              span:
                - 77
                - 78
          constraints: []
          return_type: ~
          body:
            BinaryOp:
              op: And
              lhs:
                BinaryOp:
                  op: Eq
                  lhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: a
                          span:
                            - 82
                            - 83
                      field: x
                      span:
                        - 82
                        - 85
                  rhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: b
                          span:
                            - 89
                            - 90
                      field: x
                      span:
                        - 89
                        - 92
                  span:
                    - 82
                    - 92
              rhs:
                BinaryOp:
                  op: Eq
                  lhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: a
                          span:
                            - 96
                            - 97
                      field: y
                      span:
                        - 96
                        - 99
                  rhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: b
                          span:
                            - 103
                            - 104
                      field: y
                      span:
                        - 103
                        - 106
                  span:
                    - 96
                    - 106
              span:
                - 82
                - 106
          span:
            - 67
            - 106
      span:
        - 46
        - 108
