crates/parser/tests/snapshots/fixture_test__type_sum.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 35
                      - 36
              span:
                - 30
                - 37
            - name: None
              fields: []
              span:
                - 40
                - 44
      deriving: []
      span:
        - 13
        - 44
  - DefType:
      platform: ~
      name: Either
      visibility: Private
      type_params:
        - a
        - b
      kind:
        Sum:
          variants:
            - name: Left
              fields:
                - Var:
                    name: a
                    span:
                      - 70
                      - 71
              span:
                - 65
                - 72
            - name: Right
              fields:
                - Var:
                    name: b
                    span:
                      - 81
                      - 82
              span:
                - 75
                - 83
      deriving: []
      span:
        - 45
        - 83
